tests/integration/fail/arrays/slice_non_array.ncl
# test.type = 'error'
#
# [test.metadata]
# error = 'EvalError::NAryPrimopTypeError'
%array_slice% 0 1 {}
